--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,5 +151,4 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          # Тут вместо username должен быть ваш логин на Docker Hub
-          tags: username/taski_gateway:latest
+          tags: anatoliyfs/taski_gateway:latest
